# parallelizing_with_lds

./: LICENSE  README.md  pyproject.toml
experiments/: harness.py
experiments/configs/: harness.yaml
experiments/wandb_sweep_configs/: fig1.yaml  fig2.yaml  fig3.yaml
src/: deer.py  gru.py  s5_word.py  two_well.py  utils.py
